--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,23 +4,27 @@ www:
     - "49152:80"
   volumes:
     - "./data/www/:/var/www"
+    - "./data/persistent-config/www:/root/.persistent-config"
     - "./data/log-apache2:/var/log/apache2"
     - "./data/log-php5:/var/log/php5"
   hostname: my.hostname.com
   links:
-    - memcache
+    - memcache:memcache
   environment:
     CTNR_LOCALE: "en_GB.UTF-8"
     CTNR_TIMEZONE: "Europe/London"
     CTNR_DEBUG: 1
   restart: on-failure
   tty: true
+  mem_limit: 4096m
+  memswap_limit: 1024m
 ssh:
   build: ./ssh
   ports:
     - "49153:22"
   volumes:
     - "./data/www:/var/www"
+    - "./data/persistent-config/ssh:/root/.persistent-config"
     - "./data/log-apache2:/var/log/apache2"
     - "./data/log-php5:/var/log/php5"
   links:
@@ -30,6 +34,8 @@ ssh:
     CTNR_TIMEZONE: "Europe/London"
     CTNR_DEBUG: 1
   restart: on-failure
+  mem_limit: 512m
+  memswap_limit: 256m
 memcache:
   build: ./memcache
   restart: on-failure
